--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -37,3 +37,15 @@
 .list code {
   background: #f7f7f7;
 }
+
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 160px;
+  line-height: 160px;
+  background: #364d79;
+  overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+  color: #fff;
+}
