Added dropdown and listener

--- a/src/styles/FormStyles.css
+++ b/src/styles/FormStyles.css
@@ -9,8 +9,8 @@
   max-width: 480px;
   padding: 40px;
   border-radius: 10px;
-  background: gray;
-  color: white;
+  background: khaki;
+  color: black;
 }
 
 .formTitleStyle{
